--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.1.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-track-player": "^4.1.1",
