--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,10 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'Spotify'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+
+
+//imp config
+
+
+include ':react-native-config'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
