--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-config": "^1.5.5",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-snackbar": "^2.8.0",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0"
   },
